fix header search alignment

--- a/assets/scss/components/_sub-nav.scss
+++ b/assets/scss/components/_sub-nav.scss
@@ -3,7 +3,6 @@
 	margin-top: 20px;
 	// text-align: center;
 	@include media-breakpoint-up(lg) {
-		margin-top: 0;
 		text-align: right;
 	}
 
@@ -25,17 +24,18 @@
 			@include media-breakpoint-up(lg) {
 				display: block;
 			}
-
-			.search-label {
-				margin-top: 7px;
-			}
 		}
+	}
+
+	.eader-search-form {
+		position: relative;
 	}
 
 	.list-inline-item {
 		display: block;
 		@include media-breakpoint-up(lg) {
 			display: inline-block;
+			vertical-align: top;
 			&:not(:last-child) {
 				margin-right: 50px;
 			}
@@ -58,6 +58,8 @@
 			outline-offset: 0;
 			outline: 0;
 			margin-bottom: 10px;
+			position: relative;
+			top: -7px;
 			visibility: hidden;
 			@include media-breakpoint-up(lg) {
 				height: auto;
